@@ -1,2 +1,0 @@
-@comment $NetBSD: PLIST,v 1.1 2001/11/01 00:23:59 zuntum Exp $
-${PERL5_ARCHLIB}/DynaLoader_pic.o
